--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -41,7 +41,7 @@
                     <script>document.getElementById("membership-submit-label").addEventListener("click",()=>{document.getElementById("membership-submit").click()});</script>
                 </div>
             </form>
-            <a href="/spenden#scrollToDonate" class="membership-navigate-to-donate">Einmalige Spende</a>
+            <a href="/spenden#scrollToDonate" class="membership-navigate-to-donate">Oder einmalige Spende?</a>
             <% if (typeof user !== "undefined" && user !== null && user.valid) { %>
             <div class="invisible">
                 <p id="donate-prefilled-name"><%= user.name %></p>
