--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
 </main>
 <app-footer></app-footer>
 <app-notifications-wrapper></app-notifications-wrapper>
+<app-cookie-banner></app-cookie-banner>
