Added the admin password section Updated the imprint site The app now scrolls to the top after navigation to a new site (This also happens when you navigate to a new section in the admin dashboard) Removed some components that are replaced with sections on the admin page Created a router for secured endpoints (logged in) Created a router for admin only endpoints Put the theme service behind a secured endpoint Created a mixin for a table Designed the mobile version of the sidebar from the admin page

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,5 +1,5 @@
 <p class="text">
-    Hier finden Sie eine Liste der Quellen für die Bilder, welche wir von Unsplash bezogen haben. Sie befinden sich alle im Ordner http://www.zurich-meets-tanzania.com/img/stock/<br /><br />
+    Hier finden Sie eine Liste der Quellen für die Bilder, welche wir von Unsplash bezogen haben. Sie befinden sich alle im Ordner {{ origin() }}/stock/<br /><br />
     <a href="/img/stock/beginning.jpg" target="_blank" rel="noopener">beginning.jpg</a>: Foto von
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/@framesbyfin?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Heidi Fin</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/person-mit-kompass-selektive-fokusfotografie-M2Kxb80gqcc?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
