--- a/src/app/secured/components/admin-passwords-page/admin-passwords-page.component.html
+++ b/src/app/secured/components/admin-passwords-page/admin-passwords-page.component.html
@@ -1,1 +1,30 @@
-<p>admin-passwords-page works!</p>
+@defer (when doneFetching()) {
+    <div class="table-wrapper">
+        <table>
+            <tbody>
+                <tr>
+                    <th>Webseite</th>
+                    <th>Benutzername (E-Mail)</th>
+                    <th>Passwort</th>
+                    <th>2 Faktor Secret</th>
+                </tr>
+                @for (password of passwords(); track password.websiteUrl) {
+                    <tr>
+                        <td>
+                            <a [href]="password.websiteUrl">{{ password.websiteLabel }}</a>
+                        </td>
+                        <td>{{ password.username }}</td>
+                        <td>{{ password.password }}</td>
+                        <td>{{ password.twoFactorSecret ?? "-" }}</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+} @placeholder {
+    <app-admin-unknown-page></app-admin-unknown-page>
+    @if (failedFetching()) {
+        <p class="error">Fehler beim Laden der Passwörter.</p>
+        <button (click)="fetchPasswords()" class="error">Erneut versuchen</button>
+    }
+}
