Finalized the admin password page

--- a/src/app/secured/components/admin-passwords-page/admin-passwords-page.component.html
+++ b/src/app/secured/components/admin-passwords-page/admin-passwords-page.component.html
@@ -15,7 +15,17 @@
                         </td>
                         <td>{{ password.username }}</td>
                         <td>{{ password.password }}</td>
-                        <td>{{ password.twoFactorSecret ?? "-" }}</td>
+                        <td>
+                            @if (password.twoFactorSecret === "Timon Fragen") {
+                                {{ password.twoFactorSecret }}
+                            } @else if (password.twoFactorSecret) {
+                                <a href="https://www.youtube.com/watch?v=FqvHYgHK0Mo" target="_blank" rel="noopener" title="Wie benutze ich ein 2 Faktor Secret?">
+                                    {{ password.twoFactorSecret }}
+                                </a>
+                            } @else {
+                                -
+                            }
+                        </td>
                     </tr>
                 }
             </tbody>
