Created the add admin page Improved the Database result type so that it is clear that data is only null if an error happened Added a preventDefault for the footer-newsletter-sign-up-form Changed the notifications system so that new Notifications stack on the bottom Added a darkmode version for the default table Renamed the auth.database.ts file to user.database.ts file since it better matches the content Formatted all files Added a admin-label mixin which is a combination of label and input

--- a/src/app/secured/components/admin-add-admin/admin-add-admin.component.html
+++ b/src/app/secured/components/admin-add-admin/admin-add-admin.component.html
@@ -1,1 +1,10 @@
-<p>admin-add-admin works!</p>
+<form [formGroup]="addAdminForm" (submit)="onSubmit($event)">
+    <h2>Admin hinzufügen</h2>
+    <p>
+        Gib eine E-Mail-Adresse ein um ihn zum Admin zu ernennen. Sobald jemand Admin-Rechte erhält, kann er auf alle administrativen Funktionen zugreifen. Das heisst unter anderem, dass er Zugriff auf die Verwaltungsseite hat, auf der du dich gerade
+        befindest.
+    </p>
+    <label for="email">E-Mail</label>
+    <input type="email" id="email" placeholder="E-Mail-Adresse eingeben" required formControlName="emailControl" />
+    <button type="submit" [disabled]="submitButtonDisabled()">{{ submitButtonText() }}</button>
+</form>
