--- a/src/app/secured/components/admin-passwords-page/admin-passwords-page.component.html
+++ b/src/app/secured/components/admin-passwords-page/admin-passwords-page.component.html
@@ -8,7 +8,7 @@
                     <th>Passwort</th>
                     <th>2 Faktor Secret</th>
                 </tr>
-                @for (password of passwords(); track password.websiteUrl) {
+                @for (password of passwords(); track password.websiteLabel) {
                     <tr>
                         <td>
                             <a [href]="password.websiteUrl">{{ password.websiteLabel }}</a>
