--- a/src/styles/darkmode.imports.scss
+++ b/src/styles/darkmode.imports.scss
@@ -3,3 +3,4 @@
 @use "../app/components/notification/notification.darkmode.component.scss";
 @use "../app/components/notifications-wrapper/notifications-wrapper.darkmode.component.scss";
 @use "../app/secured/dashboard/dashboard.darkmode.component.scss";
+@use "../app/secured/components/admin-passwords-page/admin-passwords-page.darkmode.component.scss";
