--- a/src/app/components/footer-newsletter-sign-up-form/footer-newsletter-sign-up-form.component.html
+++ b/src/app/components/footer-newsletter-sign-up-form/footer-newsletter-sign-up-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="newsletterSignUpForm" (submit)="onSubmit()">
+<form [formGroup]="newsletterSignUpForm" (submit)="onSubmit($event)">
     <div>
         <h2>Newsletter</h2>
         <p>Bleiben Sie über Zurich meets Tanzania und ähnliche Projekte informiert.</p>
