--- a/views/team.ejs
+++ b/views/team.ejs
@@ -47,7 +47,7 @@
             <h1 class="title margin-t-5vh w1000 w1200">Unser aktuelles Team</h1>
             <p class="text"><%= team.text %></p>
             <%- include("./snippets/teamMember.ejs", {
-                members: team.members
+                members: team.members,
                 teamId: team.id
             }); %>
             <p class="date">Zuletzt aktualisiert am <%= toRealDate(date) %></p>
