Added the homepage picture change page

--- a/src/app/secured/components/admin-homepage-picture-page/admin-homepage-picture-page.component.html
+++ b/src/app/secured/components/admin-homepage-picture-page/admin-homepage-picture-page.component.html
@@ -1,1 +1,10 @@
-<p>admin-homepage-picture-page works!</p>
+<form (submit)="onSubmit($event)">
+    <h2>Homepage Bild aktualisieren</h2>
+    <p>Lade ein Bild hoch, welches als neues Homepage-Bild verwendet werden soll. Das Bild wird auf der Startseite ganz oben angezeigt.</p>
+    <label for="image">
+        <h3>Bild</h3>
+        <img alt="Vorschau" [src]="imagePreview()">
+    </label>
+    <input type="file" id="image" required (change)="streamValue($event)" accept="image/png, image/jpg, image/gif, image/jpeg, image/tiff, image/raw, image/bpm, image/webp, image/ico" />
+    <button type="submit" [disabled]="submitButtonDisabled()">{{ submitButtonText() }}</button>
+</form>
